# olime_backend_v3

./: .gitignore  README.md  pyproject.toml  render.yaml
categories/: admin.py  models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py
config/: settings.py  urls.py
contents/: admin.py  models.py  serializers.py  urls.py  views.py
contents/migrations/: 0001_initial.py  0002_initial.py  (+5 more)
current_schools/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
difficult_questions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
early_decisions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
followings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
followlists/: admin.py  models.py  serializers.py  urls.py  views.py
lovings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
medias/: models.py  views.py
performances/: admin.py  models.py  serializers.py  urls.py  views.py
regular_decisions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
replys/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
schools/: admin.py  models.py  serializers.py  urls.py  views.py
subjects/: admin.py  models.py  serializers.py  urls.py  views.py
target_schools/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
task_assignments/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
task_days/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
task_evaluations/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
task_guidelines/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
task_personals/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
tasks/: admin.py  models.py  serializers.py  urls.py  views.py
uploads/: happy-birthday-g7c96c5342_19.textClipping
users/: admin.py  models.py  serializers.py  urls.py  views.py
workbook_evaluations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
workbooks/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
(+73 files in other folders)
