[tool.poetry]
name = "olime-backend-v3"
version = "0.1.0"
description = ""
authors = ["thwns <naturalthwns@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "olime_backend_v3"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.4"
Pillow = "^9.3.0"
djangorestframework = "^3.14.0"
PyJWT = "^2.6.0"
django-environ = "^0.9.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.154.1"}
strawberry-graphql-django = "^0.9"
drf-spectacular = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
