[tool.poetry]
name = "olime-backend-v3"
version = "0.1.0"
description = ""
authors = ["thwns <naturalthwns@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "~4.0"
djangorestframework = "^3.14.0"
PyJWT = "^2.6.0"
django-environ = "^0.9.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.154.1"}
strawberry-graphql-django = "^0.9"
drf-spectacular = "^0.25.1"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"
sentry-sdk = "^1.13.0"
requests = "^2.28.2"
jupyter = "^1.0.0"
notebook = "^6.5.3"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
joblib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
